--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-event-listeners",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "author": "Tobias Meinhardt <tobias.meinhardt89@gmail.com>",
   "main": "index.js",
   "scripts": {
@@ -33,9 +33,9 @@
     "type-detect": "^4.0.3"
   },
   "devDependencies": {
+    "babel-plugin-syntax-class-properties": "^6.13.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
     "jest": "19.0.2"
-  },
-  "jest": {
-    "preset": "react-native"
   }
 }
