--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,7 @@
 {
-"presets": ["react-native"]
+  "presets": ["es2015"],
+  "plugins": [
+    "syntax-class-properties",
+    "transform-class-properties"
+  ]
 }
