--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest --no-cache"
+    "test": "jest --no-cache",
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
   },
   "repository": {
     "type": "git",
@@ -35,12 +36,17 @@
   "devDependencies": {
     "babel-plugin-syntax-class-properties": "6.13.0",
     "babel-plugin-transform-class-properties": "6.24.1",
-    "jest": "19.0.2",
-    "babel-preset-es2015": "6.24.1"
+    "babel-preset-es2015": "6.24.1",
+    "coveralls": "^3.0.0",
+    "jest": "19.0.2"
   },
   "jest": {
     "transform": {
       "^.+\\.js$": "<rootDir>/jest.transform.js"
-    }
+    },
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "index.js"
+    ]
   }
 }
