--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "type-detect": "4.0.3"
+    "type-detect": "^4.0.8"
   },
   "devDependencies": {
-    "babel-plugin-syntax-class-properties": "6.13.0",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-preset-es2015": "6.24.1",
-    "coveralls": "^3.0.0",
-    "jest": "19.0.2"
+    "babel-plugin-syntax-class-properties": "^6.13.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "coveralls": "^3.0.3",
+    "jest": "^24.8.0"
   },
   "jest": {
     "transform": {
